--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
   "name": "manifold-zeitgeist",
+  "scripts": {
+    "lint": "eslint 'src/**/*.{js,ts}'"
+  },
   "dependencies": {
     "@zeit/integration-utils": "latest"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.17.1",
+    "typescript": "^3.5.1"
   }
 }
