--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "manifold-zeitgeist",
+  "name": "zeit-manifold-integration",
   "scripts": {
+    "dev": "now dev -p 5005",
     "lint": "eslint 'src/**/*.{js,ts}'"
   },
   "dependencies": {
     "@zeit/integration-utils": "latest"
   },
   "devDependencies": {
+    "@types/node": "^12.0.4",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "eslint": "^5.16.0",
