--- a/now.json
+++ b/now.json
@@ -2,11 +2,13 @@
   "name": "manifold-integration",
   "alias": "manifold-integration.zeit.sh",
   "version": 2,
-  "builds": [{ "src": "./src/index.ts", "use": "@now/node" }],
+  "builds": [
+    { "src": "src/index.ts", "use": "@now/node" },
+    { "src": "src/oauth.ts", "use": "@now/node" }
+  ],
   "routes": [
     { "src": "/", "dest": "src/index.ts" },
-    { "src": "/login", "dest": "src/oauth.ts" },
-    { "src": "/login/oauth", "dest": "src/oauthCallback.ts" }
+    { "src": "/login/oauth", "dest": "src/oauth.ts" }
   ],
   "env": {
     "NODE_ENV": "development"
