Add starter templates

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "zeit-manifold-integration",
   "scripts": {
-    "dev": "manifold run -- now dev .",
+    "dev": "manifold run -- npx nodemon --watch src/views -e ts --exec 'now dev .'",
     "deploy": "manifold run -- now -e ROOT_URL -e ZEIT_CLIENT_ID -e MANIFOLD_OAUTH_URL",
     "lint": "eslint 'src/**/*.{js,ts}'"
   },
   "dependencies": {
-    "@types/node": "^12.0.4",
     "@zeit/integration-utils": "latest",
     "cookie": "^0.4.0",
     "node-fetch": "^2.6.0"
