--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@zeit/integration-utils": "latest",
+    "base32": "0.0.6",
     "cookie": "^0.4.0",
     "node-fetch": "^2.6.0"
   },
