--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "*": ["node_modules/*", "*"]
     }
   },
-  "include": ["./src", "./types"],
+  "include": ["src/**/*", "types/**/*"],
   "exclude": ["node_modules"]
 }
